Fix text wrapping issue on challenge list

--- a/AntGameUI/src/antGame/Challenge/List/ChallengePage.module.css
+++ b/AntGameUI/src/antGame/Challenge/List/ChallengePage.module.css
@@ -118,5 +118,5 @@ body {
 }
 
 .age {
-  margin-left: 0.2rem;
+  margin-left: 0.1rem;
 }
